[tool.poetry]
name = "pylts"
description = "Pydantic wrapper around litestreamed database specific to an AWS bucket."
version = "0.0.7"
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://mv3.dev"
repository = "https://github.com/justmars/pylts"
documentation = "https://justmars.github.io/pylts"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Framework :: Pydantic",
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21"
pydantic = "^1.10.4"
loguru = "^0.6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
rich = "^13.3"
black = "^23.1.0"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
jupyter = "^1.0.0"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.0.9"

[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=pylts tests/"
testpaths = ["tests"]

[tool.ruff]
ignore = ["F401"]

[tool.black]
target-version = ['py311']
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
