[tool.poetry]
name = "pylts"
description = "Pydantic wrapper around litestreamed database specific to an AWS bucket."
version = "0.0.9"
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://mv3.dev"
repository = "https://github.com/justmars/pylts"
documentation = "https://justmars.github.io/pylts"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Framework :: Pydantic",
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0"
pydantic = "^1.10.7"
loguru = "^0.6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
rich = "^13.3"
pytest = "^7.3"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.0.15"
ipython = "^8.11.0"
ipykernel = "^6.22.0"

[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=pylts tests/"
testpaths = ["tests"]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --doctest-modules --cov"
filterwarnings = [
  "ignore::DeprecationWarning", # DeprecationWarning: pkg_resources is deprecated as an API
]
testpaths = ["tests", "pylts"]

[tool.ruff]
ignore = ["F401"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[tool.black]
target-version = ['py311']
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
